--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -7,15 +7,15 @@
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.3.4/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-2.3.4/jasmine.css">
 
-  <script src="jquery-2.1.4.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/sun.js"></script>
-  <script src="src/planet.js"></script>
-  <script src="application.js"></script>
+  <script src="public/js/src/sun.js"></script>
+  <script src="public/js/src/planet.js"></script>
+  <script src="public/js/src/application.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/sunSpec.js"></script>
